--- a/index.css
+++ b/index.css
@@ -1,11 +1,13 @@
 /*======= Font rengini #3C373B yapan bir yeni bir universal selector yaratın*/
-
+* {color:#3C373B ;}
 
 h1 {
+  
   font-family: 'Gaegu', cursive;
   margin: 20px 0;
   /*=======  Font size'ı 60px yapın ve text'i ortalayın(center) */
-  font-size: 10px;
+  text-align: center;
+  font-size: 60px;
 }
 
 h2, h3, h4, h5, h6 {
@@ -13,7 +15,15 @@ h2, h3, h4, h5, h6 {
   margin-bottom: 0;
   padding: 0 10px;
   /*=======  Font size'ı 30px yapın*/
-  font-size: 10px;
+  font-size: 30px;
+}
+
+p {
+
+  font-size: 16px;
+font-family: roboto;
+padding: 10px;
+line-height: 1.4;
 }
 
 /*======= Sayfadaki TÜM p tag'leri için aşağıdaki özellikleri içeren bir selector yaratın:
@@ -31,18 +41,22 @@ line-height: 1.4;
   border-radius: 10px;
 
 */
+img {
+
+  border-radius: 10px;
+}
 
 .content-row {
   display: flex;
 }
 
 .content-row div {
-  /*======= margin propery yaratın.  Değerini 20px olarak atayın*/
+  margin: 20px;
 }
 
 .container {
-  /*======= width property yaratın. Değerini 750px olarak atayın */
   margin: 0 auto;
+  width: 750px;
 }
 
 .container header nav a {
@@ -54,21 +68,32 @@ line-height: 1.4;
   color: white;
   text-decoration: none;
   margin-bottom: 20px;
-   /*======= background property yaratın. Değerini #E79947 olarak atayınız.*/
-  
-}
+  background: #E79947  ;
+  }
 
 .container header nav a:hover {
-/*======= background property yaratın ve değeri white olsun.  Sonra, color property yaratın ve değerini #E79947 yapın. */
+  background: rgb(247, 243, 243);
+  color: #E79947;
 }
 
-/*======= Hakkmızda bölümü için aşağıdaki stilleri içeren bir selector yaratın:
+main {
+background: whitesmoke;
+padding: 30px 0;
+}
+
+main img {
+  display: block;
+}
+
+.aboutUsSection{
   margin-top: 20px;
-*/
+}
+
 
 .contact-section {
   border-top: 1px dashed black;
   padding: 20px 0;
+  line-height: 2;
 }
 
 .contact-section h2 {
@@ -76,9 +101,12 @@ line-height: 1.4;
   margin: 0 0 10px 0;
 }
 
-/*======= contact-section class'da address tag'i için aşağdıaki stilleri içeren bir selector yaratın:
-   line-height: 2;
-*/
+
+
+.features img{
+  width: 40%;
+}
+
 
 footer {
   width: 100%;
@@ -88,7 +116,7 @@ footer {
 
 footer .footer-content { 
   margin: 0 auto; 
-  /*======= width property yaratın. Değerini 750px olarak atayın */
+  width: 750px;
   
 }
 
@@ -100,23 +128,24 @@ footer .footer-content h3 {
 footer nav {
   display: flex;
 }
+ footer nav a{
+margin:10px;
+color: black;
+text-decoration: underline;
 
-/*======= Footer'daki anchor tag için aşağıdaki stilleri içeren bir selector yaratın:
-  margin: 10px;
-  color: black;
-  text-decoration: underline;
-*/
+ }
 
 
 footer nav a:first-child {
   margin-left: 0;
 }
 
-/*======= Footer nav'daki anchor tag için aşağıdaki stilleri içeren bir hover state yaratın:
+footer nav a:hover{
   color: white;
-*/
+}
 
 footer .footer-content .copyright {
   padding: 20px 0;
    /*======= metni ortalayacak kodu yazın */
+   text-align: center;
 }
